# laboC-

01/: a.out  ej5.cpp  ej6.cpp  ej7.cpp  ej8.cpp
02/: a.out  ej1.cpp  ej2.cpp  ej3.cpp  ej4.cpp  ej5.cpp  ej6.cpp  ej7.cpp  ej8.cpp  ej9.cpp
03/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
03/src/: lecturaEscritura.cpp  lecturaEscritura.h  main.cpp  vectores.cpp
04/template-alumnos/: cases.cpp  ejercicios.cpp  ejercicios.h  laboDebugging
05/template-alumnos/: cases.cpp  ejercicios.cpp  ejercicios.h  laboCiclos
06/template-alumnos/: CMakeLists.txt
06/template-alumnos/ej1/Test/: puntajeTEST.cpp
06/template-alumnos/ej2/: llenarTaxis.cpp
06/template-alumnos/ej2/Test/: llenarTaxisTEST.cpp
06/template-alumnos/ej3/: baldosasDelPiso.cpp  baldosasDelPiso.h  contandoDragones.cpp  electores.cpp  electores.h
06/template-alumnos/ej3/Test/: baldosasDelPisoTEST.cpp  contandoDragonesTEST.cpp  electoresTEST.cpp
07/template_alumnos/: CMakeLists.txt  cases.cpp  ejercicios.cpp  ejercicios.h  main.cpp
08/template_alumnos/: labo10
08/template_alumnos/src/: ejercicios.cpp  risas.cpp
09/Ejercicios/: ejercicios.cpp  ejercicios.h  main.cpp
09/Ejercicios/data/: ej2.csv  ej4.csv  ej5_1.csv  ej5_2.csv  ej5_3.csv  ej5_4.csv  ej5_5.csv  ej5_6.csv  ej5_7.csv  ej6.csv
11/template-alumnos/anagramas/src/: anagramas  main.cpp
Entrega1/: a.out  division.cpp  estaOrdenado.cpp  fibonacci.cpp  rotar.cpp  swap.cpp
Entrega2/: Existe_pico.cpp  a.out  bug_mcd.cpp  min_subsecuencia.cpp  ordenar.cpp
Entrega3/: rotar.cpp  subsecuencia.cpp
(+2 files in other folders)
